--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>小小的聊天室——登录</title>
+    <title>IKUN聊天室——登录</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Transparent Sign In Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
@@ -16,7 +16,7 @@
 </head>
 <body class="background">
 		<div class="header-w3l">
-			<h1>小小的聊天室</h1>
+			<h1>IKUN聊天室</h1>
 		</div>
 		<div class="main-content-agile">
 			<div class="sub-main-w3">	
